# Simple-Fences-Plugins

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PLUGIN_GUIDE.md  README.md  build.ps1  plugin-manifest.schema.json  plugin-update-feed.schema.json  theme-package.schema.json
cmake/: PluginExports.cpp.in
docs/: CHANGELOG.md  HOST_INTEGRATION.md  HOW_IT_WORKS.md  INDEX.md  PLUGINS.md  SIDEBAR.md  THEME_CONTRACT.md  THEME_PACKAGE_CONTRACT.md  create-a-plugin.md  default-icon-map.tabler.json  host-integration.md  plugin-manifest.md  plugin-quality-rules.md  theme-integration.md
plugin-template/: README.md  plugin.json
plugin-template/src/: TemplatePlugin.cpp  TemplatePlugin.h
plugins/clock-widget/: plugin.json
plugins/clock-widget/src/: ClockWidgetPlugin.cpp  ClockWidgetPlugin.h
plugins/context-actions/: README.md  plugin.json
plugins/context-actions/src/: ContextActionsPlugin.cpp  ContextActionsPlugin.h
plugins/dark-glass-theme/: README.md  plugin.json
plugins/dark-glass-theme/src/: DarkGlassThemePlugin.cpp  DarkGlassThemePlugin.h
plugins/external-provider/: README.md  plugin.json
plugins/external-provider/src/: ExternalProviderPlugin.cpp  ExternalProviderPlugin.h
plugins/fence-organizer/: plugin.json
plugins/fence-organizer/src/: FenceOrganizerPlugin.cpp
plugins/folder-portal/: README.md  plugin.json
plugins/folder-portal/src/: FolderPortalPlugin.cpp  FolderPortalPlugin.h
plugins/network-drive-fence/: plugin.json
plugins/network-drive-fence/src/: NetworkDriveFencePlugin.cpp
plugins/network-drive-space/: README.md  plugin.json
plugins/network-drive-space/src/: NetworkDriveSpacePlugin.cpp  NetworkDriveSpacePlugin.h
plugins/powershell-fence/: README.md  plugin.json
plugins/powershell-fence/src/: PowerShellFencePlugin.cpp  PowerShellFencePlugin.h
plugins/powershell-space/: README.md  plugin.json
plugins/powershell-space/src/: PowerShellSpacePlugin.cpp  PowerShellSpacePlugin.h
plugins/productivity-actions/: README.md  plugin.json
plugins/productivity-actions/src/: ProductivityActionsPlugin.cpp  ProductivityActionsPlugin.h
plugins/rules-engine/: plugin.json  rules.schema.json
plugins/rules-engine/src/: RulesEnginePlugin.cpp
plugins/shared/: HostSdkRuntimeShim.cpp  PluginUiPatterns.h  ThemeTokenHelper.h
plugins/sorting-clean-up/: README.md  plugin.json
plugins/sorting-clean-up/src/: SortingCleanupPlugin.cpp  SortingCleanupPlugin.h
plugins/space-organizer/: README.md  plugin.json
plugins/space-organizer/src/: SpaceOrganizerPlugin.cpp  SpaceOrganizerPlugin.h
plugins/visual-modes/: README.md  plugin.json
plugins/visual-modes/src/: VisualModesPlugin.cpp  VisualModesPlugin.h
plugins/widgets-plus/: plugin.json
plugins/widgets-plus/src/: WidgetsPlusPlugin.cpp  WidgetsPlusPlugin.h
samples/: host-theme-settings.sample.json  theme-package.sample.json
scripts/: validate-plugin-manifests.ps1
